syntax = "proto3";

package kong.admin.model.v1;

option go_package = "github.com/kong/koko/internal/gen/grpc/kong/admin/model/v1;v1";

message RequestCluster {
  string id = 1;
}
